--- a/_colores.scss
+++ b/_colores.scss
@@ -15,3 +15,35 @@ $advertencia: rgb(228, 228, 65);
 $informacion: #9bc8ee;
 $claro: #B6EADA;
 $oscuro: #03001C;
+
+$color-solido: (
+      "primario": $primario,
+      "secundario": $secundario,
+      "terciario":$terciario,
+      "exito": $exito,
+      "peligro": $peligro,
+      "advertencia": $advertencia,
+      "informacion": $informacion,
+      "claro": $claro,
+      "oscuro": $oscuro,
+);
+
+$color-rgb:(
+        "r1": $rgb-1,
+        "r2": $rgb-2,
+        "r3": $rgb-3,
+        "r4": $rgb-4,
+        "r5": $rgb-5,
+);
+
+@each $color, $valorcolor in $color-solido {
+    .fc-#{$color} {   
+        background-color: $valorcolor;
+    }
+}
+
+@each $color, $valorcolor in $color-rgb {
+    .fc-#{$color} {   
+        background-image: $valorcolor;
+    }
+}
