Modificación del modulo de botones                 Ahora los botones se generan de maneran mas optimizada

--- a/scss/_botones.scss
+++ b/scss/_botones.scss
@@ -1,17 +1,63 @@
-@use 'bordes' as *;
+@use 'colores' as *;
+$small: 60px;
+$medium: 120px;
+$large: 180px;
+$xl: 240px;
 
-.boton-1-sm{
-    text-decoration:none;
-    color: white;
+.btn{
     display: flex;
+    justify-content: center;
     align-items: center;
-    align-content: center;
-    background-color:#4929aa;
-    width: fit-content;
-    padding: 13px;  
+    border: none;
 }
-      
-.boton-1-sm:hover{
-    opacity: 0.8;
-    cursor: pointer;
+
+@mixin botones($nombre, $size, $color, $claro,$nombrec){
+    @if $claro == true{
+        .btn-#{$nombre}-#{$nombrec}{
+            height: $size - calc($size/1.7);
+            width:$size;
+            background-color: $color;
+            color: darken($color, 40);
+            border-radius: calc($size/10);
+        }
+        .btn-#{$nombre}-#{$nombrec}:hover{
+            background-color: darken($color, 40);
+            color: lighten($color, 40)
+        }
+        .btn-#{$nombre}-#{$nombrec}:active{
+            background-color: darken($color, 60);
+            color: lighten($color, 80)
+        }
+
+    }@else{
+        .btn-#{$nombre}-#{$nombrec}{
+            height: $size - calc($size/1.7);
+            width:$size;
+            background-color: $color;
+            color: lighten($color, 40);
+            border-radius: calc($size/10);
+        }
+        .btn-#{$nombre}-#{$nombrec}:hover{
+            background-color: lighten($color, 40);
+            color: darken($color, 40)
+        }
+        .btn-#{$nombre}-#{$nombrec}:active{
+            background-color: lighten($color, 60);
+            color: darken($color, 80)
+        }
+    }
+
+}
+
+@each $color, $valorcolor in $color-claro {
+    @include botones(sm, $small,$valorcolor, true, $color);
+    @include botones(m, $medium,$valorcolor, true, $color);
+    @include botones(l, $large,$valorcolor, true, $color);
+    @include botones(xl, $xl,$valorcolor, true, $color);
+}
+@each $color, $valorcolor in $color-oscuro {
+    @include botones(sm, $small,$valorcolor, false, $color);
+    @include botones(m, $medium,$valorcolor, false, $color);
+    @include botones(l, $large,$valorcolor, false, $color);
+    @include botones(xl, $xl,$valorcolor, false, $color);
 }
