--- a/scss/formularios.scss
+++ b/scss/formularios.scss
@@ -1,11 +1,18 @@
 @use 'fuente' as*;
 @use 'colores' as*;
+@use 'botones' as*;
 $sizelabel: 2vh;
 $sizetext: 1.5vh;
 $textColor: #7b7b7b;
 $border: #c6c6c6;
 $padding: 1.7vh;
 $radio: 0.4vh;
+$sizes: (
+    'small': 100px,
+    'medium': 200px,
+    'large':300px,
+    'xl': 400px
+);
 
 .form-etiqueta{
     font-family: Arial;
@@ -43,8 +50,36 @@ $radio: 0.4vh;
     display: flex;
     align-items: center;
     margin: 0.4vh 0 0.4vh 1vh;
+    border: none;
 }
 .form-check-label{
     font-size: $sizetext;
     font-family: Arial;
 }
+.disable{
+    background-color: #dadada;
+    color: #fff;
+}
+
+@mixin formSizeCmb($size, $nombre){
+    .form-Cmb-#{$nombre}{
+        width: $size;
+    }
+}
+
+@each $size1, $medida in $sizes{
+    @include formSizeCmb($medida, $size1);
+}
+@mixin btnDisable($size, $nombre){
+    .btn-disable-#{$nombre}{
+        background-color: #7b7b7b;
+        color:#fff;
+        height: $size - calc($size/1.7);
+        width:$size;
+        border-radius: calc($size/10);
+    }
+}
+@include btnDisable($small, "sm");
+@include btnDisable($medium, "m");
+@include btnDisable($large, "l");
+@include btnDisable($xl, "xl");
