--- a/scss/_contenedores.scss
+++ b/scss/_contenedores.scss
@@ -1,4 +1,5 @@
 $breakpoint: (
+  xxgn: 1400px,  
   xgn: 1200px,
   gn: 960px,
   md: 720px,
@@ -11,14 +12,45 @@ $breakpoint: (
   }
 };
 
-@each $nombre-contenedor, $valor-contenedor in $breakpoint {
-  .contenedor-#{$nombre-contenedor} {   
-    width: 1140px;
+.contenedor{
+  width: 1400px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 12px;
+  display: flex;
+  flex-wrap: wrap;
+  @each $nombre, $tamanio in $breakpoint{
+    @if $tamanio > 540px{
+      
+      @include redimencionar($nombre){
+        width: $tamanio - 300px;
+      }
+    }@else {
+      @include redimencionar($nombre){
+        width: 100%;
+      }
+    }
+  }
+}
+
+.contenedor-100{
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     padding: 12px;
     display: flex;
     flex-wrap: wrap;
+}
+
+@each $nombre-contenedor, $valor-contenedor in $breakpoint {
+  .contenedor-#{$nombre-contenedor} {   
+    width: 1400px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 12px;
+    display: flex;
+    flex-wrap: wrap;
+
     background-color: burlywood;
     @if $nombre-contenedor == "pq"{
       @each $nombre, $tamanio in $breakpoint{
@@ -70,6 +102,20 @@ $breakpoint: (
           }
         }
         @if $tamanio == 1200px {
+          @include redimencionar($nombre){
+            width: 100%;
+          }
+        }
+      }
+    }
+    @if $nombre-contenedor == "xxgn"{
+      @each $nombre, $tamanio in $breakpoint{
+        @if $tamanio > 1400px{
+          @include redimencionar($nombre){
+            width: $tamanio - 300px;
+          }
+        }
+        @if $tamanio == 1400px {
           @include redimencionar($nombre){
             width: 100%;
           }
