--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,4 +1,3 @@
-
 @use 'fuente' as *;
 @use '_colores' as *;
 
@@ -91,3 +90,26 @@ transition: transform .2s ease-in;
 color: $menu-colort ;
 
 }
+
+.barra-vertical{
+background-color: $claro;
+width: 400px;
+height: 90%;
+text-align: $t-a;
+
+}
+
+.link-s{
+
+display: block;
+text-decoration: none;
+text-align: justify;
+margin: $mg;
+color: black;
+
+}
+.link-s:hover{
+
+    background-color: $bg2;
+}
+    
