--- a/scss/alertas.scss
+++ b/scss/alertas.scss
@@ -1,10 +1,12 @@
 @use 'colores' as*;
+@use 'fuente' as*;
 .alerta {
     display: flex;
     width: 25%;
     height: auto;
     border-radius: 0.4vh;
-    font-size: 2.04vh;
+    font-size: $size-2;
+    font-family: Arial;
     align-items: center;
     padding: 0.6vh 0.6vh 0.6vh 1.5vh;
     flex-wrap: wrap;
