--- a/scss/style.css
+++ b/scss/style.css
@@ -6673,4 +6673,65 @@ svg {
   margin: 13px;
 }
 
+.badge-1 {
+  color: white;
+  width: 60px;
+  height: 60px;
+  padding: 4px;
+}
+
+.badge-2 {
+  color: white;
+  padding: 4px;
+  border-radius: 10px;
+}
+
+.badge-2 {
+  color: white;
+  padding: 4px;
+  border-radius: 10px;
+  box-shadow: 10px 5px 5px #03001C;
+}
+
+.badge-3 {
+  color: white;
+  padding: 4px;
+  background-color: #B6EADA;
+}
+
+.badge-3:hover {
+  background-color: #B6EADA;
+}
+
+.badge-4 {
+  color: white;
+  padding: 4px;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.badge-5 {
+  color: white;
+  padding: 4px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px 0 rgb(209, 102, 221), 4px 4px 16px 0 #d66, 0px 0px 24px 2px rgb(221, 197, 102);
+}
+
+.-link-bad {
+  text-decoration: none;
+  color: white;
+}
+
+.primario {
+  background-color: #5B8FB9;
+}
+
+.secundario {
+  background-color: #4929aa;
+}
+
+.terciario {
+  background-color: #301E67;
+}
+
 /*# sourceMappingURL=style.css.map */
