--- a/scss/style.css
+++ b/scss/style.css
@@ -6441,10 +6441,10 @@ svg {
   border-radius: 24px;
 }
 
-.fondo-menu {
+.fondo-menu1 {
   width: 100%;
   height: 9vh;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 }
 
 .navbar {
@@ -6488,6 +6488,58 @@ svg {
   width: 19.7%;
   height: 95%;
   margin-top: 9vh;
+}
+
+.link-s {
+  display: block;
+  text-decoration: none;
+  text-align: justify;
+  padding: 16px;
+  color: black;
+}
+
+.link-s:hover {
+  background-color: #3c91e6;
+}
+
+.fj {
+  position: fixed;
+}
+
+.fondo-menu {
+  width: 100%;
+  height: 9vh;
+  background-color: #4929aa;
+}
+
+.navbar-2 {
+  text-align: center;
+}
+
+.etiqueta-2 {
+  list-style: none;
+  padding: 25px 0;
+  display: inline-block;
+  padding: 25px 0;
+  margin-right: 16px;
+  font-size: 2.3vh;
+  font-size: Times;
+  transition: transform 0.5s ease-in;
+}
+
+.t-none {
+  text-decoration: none;
+  color: black;
+}
+
+.etiqueta-2:hover {
+  color: rgb(183, 183, 202);
+  background-color: #B6EADA;
+  transform: translateX(20px);
+}
+
+.color {
+  color: rgb(255, 255, 255);
 }
 
 .link-s {
