--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -39,7 +39,7 @@ $t-a:center;
 .fondo-menu{
 width: 100%;
 height: 9vh;
-background-color:white;
+background-color:$menu-colort;
 }
 //clase para el menu y centrado
 .navbar{
