--- a/scss/style.css
+++ b/scss/style.css
@@ -6444,7 +6444,7 @@ svg {
 .fondo-menu {
   width: 100%;
   height: 9vh;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 .navbar {
