--- a/scss/style.css
+++ b/scss/style.css
@@ -6558,7 +6558,7 @@ svg {
   position: fixed;
 }
 
-@media screen and (max-width: 1514px) {
+@media screen and (max-height: 860px) {
   .barra-vertical {
     background-color: #c6d8e7;
     width: 19.7%;
@@ -6569,7 +6569,22 @@ svg {
     display: block;
     text-decoration: none;
     text-align: justify;
-    padding: 12px;
+    padding: 10px;
+    color: black;
+  }
+}
+@media screen and (max-width: 1490px) {
+  .barra-vertical {
+    background-color: #c6d8e7;
+    width: 19.7%;
+    height: 95%;
+    margin-top: 9vh;
+  }
+  .link-s {
+    display: block;
+    text-decoration: none;
+    text-align: justify;
+    padding: 10px;
     color: black;
   }
 }
