--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,6 +1,6 @@
 //Colores RGB
 $rgb-1: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
-$rgb-2: linear-gradient(90deg, #0800ff 0%, #00ff88 100%);
+$rgb-2: linear-gradient(90deg, #1d198b 0%, #12643e 100%);
 $rgb-3: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 $rgb-4: linear-gradient(90deg, #00d2ff 0%, #4958ff 100%);
 $rgb-5: linear-gradient(90deg, #efd5ff 0%, #5e69ff 100%);
